[tool.poetry]
name = "pci_db_parsing"
version = "0.1.0"
description = ""
authors = ["Matheus Xavier <mxavier@hexnix.com>"]

[tool.poetry.dependencies]
python = "^3.10"
msgpack = "^1.0.3"
requests = "^2.27.1"
cbor2 = "^5.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
